Version 0.0.4 (2018-02-??)

   Simple undecorated template (will be used for tests).

Version 0.0.3 (2018-02-05)

   Compile template with the given class name

Version 0.0.2 (2018-02-04)

   Write generated code to .py file and byte-compile the file.

Version 0.0.1 (2018-02-04)

   Initial release.