@@ -1,6 +1,3 @@
-Option to not cache compiled templates in files.
-
-
 Tests
 
 
